Add Appveyor badge on README

--- a/README.adoc
+++ b/README.adoc
@@ -2,6 +2,7 @@
 
 ifdef::env-github[]
 image:https://img.shields.io/travis/Mogztter/opal-node-compiler/master.svg[Travis build status, link=https://travis-ci.org/Mogztter/opal-node-compiler]
+image:https://ci.appveyor.com/api/projects/status/i4l3eqm88rwq6m01/branch/master?svg=true[Appveyor build status, link=https://ci.appveyor.com/project/Mogztter/opal-node-compiler]
 image:http://img.shields.io/npm/v/opal-compiler.svg[npm version, link=https://www.npmjs.org/package/opal-compiler]
 endif::[]
 
